--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,22 @@
 }
 
 .word {
-  margin-left: 30%;
-  margin-top: 0px;
-  width: 70%;
-  font-size: xx-large;
   display: flex;
+  position: absolute;
+  bottom: 20%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.letter {
+  border-bottom: 3px solid #2980b9;
+  display: inline-flex;
+  font-size: 30px;
+  align-items: center;
+  justify-content: center;
+  margin: 0 3px;
+  height: 50px;
+  width: 20px;
 }
 
 .hangman {
@@ -16,13 +27,18 @@
   height: 20%;
 }
 
-.letter {
-  border-bottom: 3px solid #2980b9;
-  display: flex;
-  font-size: xx-large;
-  align-items: right;
-  justify-content: right;
-  margin: 0 3px;
-  height: 10%;
-  width: 10%;
+.wrongTries {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  flex-direction: row;
+  text-align: center;
+}
+
+.message {
+  visibility:hidden;
+}
+
+.message.show {
+  visibility: visible;
 }
